fjord-compiler/test/errors/MissingExpression.fj
module test.errors.MissingExpression

empty : Int
empty = 
